{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 1,
  "lineage": "some-uuid-vulnerable",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bad_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "sg-987654",
            "name": "bad_sg",
            "region": "us-east-1",
            "ingress": [
              {
                "from_port": 22,
                "to_port": 22,
                "protocol": "tcp",
                "cidr_blocks": ["0.0.0.0/0"],
                "ipv6_cidr_blocks": []
              },
              {
                "from_port": 3389,
                "to_port": 3389,
                "protocol": "tcp",
                "cidr_blocks": ["0.0.0.0/0"],
                "ipv6_cidr_blocks": []
              },
              {
                "from_port": 0,
                "to_port": 0,
                "protocol": "-1",
                "cidr_blocks": ["0.0.0.0/0"],
                "ipv6_cidr_blocks": []
              },
              {
                "from_port": 8080,
                "to_port": 8080,
                "protocol": "tcp",
                "cidr_blocks": ["0.0.0.0/0"],
                "ipv6_cidr_blocks": []
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bad_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "sgr-111111",
            "type": "ingress",
            "from_port": 22,
            "to_port": 22,
            "protocol": "tcp",
            "cidr_blocks": ["0.0.0.0/0"],
            "ipv6_cidr_blocks": []
          }
        }
      ]
    }
  ]
}